# pico-mc-display-bridge

./: .gitignore  .gitmodules  README.md
common/: pico-mc-display-bridge-cmds.h
device/: CMakeLists.txt  mc_bridge_model.cpp  mc_bridge_model.h  mc_bridge_usb_dev.cpp  mc_channel_strip_display.cpp  mc_channel_strip_display.h  mc_channel_text.cpp  mc_channel_text.h  mc_fader_sync.cpp  mc_fader_sync.h  mc_meter.cpp  mc_meter.h  mc_settings_file.cpp  mc_settings_file.h  mc_seven_seg_display.cpp  mc_seven_seg_display.h  mc_vpot_display.cpp  mc_vpot_display.h  midi_processor_mc_display.cpp  midi_processor_mc_display.h  midi_processor_mc_display_core.cpp  midi_processor_mc_display_core.h  save_settings_menu_item.h  setup_menu.cpp  setup_menu.h  usb_descriptors.c  usb_descriptors.h
ext_lib/ssd1306/src/: driver_ssd1306_font.h
host/: CMakeLists.txt  midi_buttons.cpp  midi_buttons.h  nav_buttons.cpp  nav_buttons.h  pico-mc-display-bridge-host.cpp  pico_pico_midi_lib_config.h  tusb_config.h
